# blgol60

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  blgo60.cabal  blgol60.cabal  default.nix  flake.nix  fourmolu.yaml  hie.yaml  shell.nix  treefmt.toml
.ccls-cache/@@home@jimmy@newDisk@Repo@blgo60/: @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@__sigset_t.h.blob  @usr@include@bits@types@clock_t.h.blob  @usr@include@bits@types@clockid_t.h.blob  @usr@include@bits@types@cookie_io_functions_t.h.blob  @usr@include@bits@types@locale_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@types@struct_itimerspec.h.blob  @usr@include@bits@types@struct_sched_param.h.blob  @usr@include@bits@types@struct_timespec.h.blob  @usr@include@bits@types@struct_timeval.h.blob  @usr@include@bits@types@struct_tm.h.blob  @usr@include@bits@types@time_t.h.blob  (+19 more)
.ccls-cache/@@home@jimmy@newDisk@Repo@pickle/: @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@cookie_io_functions_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@11.0.1@include@stdarg.h.blob  @usr@lib@clang@11.0.1@include@stddef.h.blob
.ccls-cache/@home@jimmy@newDisk@Repo@blgo60/: cbits@rts.c  cbits@rts.c.blob  cbits@rts_mem.c  cbits@rts_mem.c.blob  cbits@rts_mem.h.blob  cbits@rts_thread.c.blob  cbits@rts_thread.h  cbits@rts_thread.h.blob
.ccls-cache/@home@jimmy@newDisk@Repo@pickle/: cbits@rts.c.blob
app/: Main.hs
cbits/: rts_thread.c
data/basic/: basic1.a60  basic2.a60  basic3.a60  basic4.a60  basic5.a60
data/examples/: example10.alg  example16.alg  example17.alg  example18.alg  example20.alg  example20b.alg  example7.alg  man_or_boy.alg  mmind.alg  nqueen.alg  tennent.alg  whetstone.alg
data/long/: matrix10.a60  matrix4.a60  matrix5.a60  matrix7.a60  matrix8.a60  matrix9.a60  stat0.a60  stat1.a60  stat2.a60  stat3.a60  stat4.a60  vector0.a60  vector1.a60  vector2.a60  vector3.a60  vector4.a60  vector6.a60
data/simple/: 1_comment.a60  1_eva.a60  2_adamar.a60  2_array.a60  2_outinteger.a60  3_inreal.a60  3_outreal.a60  4_for.a60  4_for2.a60  4_goto.a60  4_if.a60  6_intProc.a60  6_realProc.a60
data/test/: 1_adam.a60.expect  1_eva.a60.expect  2_adamar.a60.expect  2_array.a60.expect  2_ininteger.a60  2_outinteger.a60  2_outinteger.a60.expect  3_boolean.a60  3_inreal.a60.expect  3_outreal.a60.expect  5_typelessProc.a60  6_intProc.a60  7_inchar.a60  7_length.a60  7_outchar.a60  7_string.a60  7_string.a60.expect  7_terminator.a60  7_terminator.a60.expect  8_fileRead.a60  8_fileWrite.a60  8_fileWrite.a60.expect
data/test1/: 1_comment.a60  2_array.a60  4_for.a60  4_goto.a60  4_while.a60  5_twoBlocks.a60  7_outchar.a60  8_fileRead.a60  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AST.hs  ASTShow.hs  Dag.hs  Env.hs  Error.hs  Frame.hs  Graph.hs  Lexer.hs  Map.hs  Monad.hs  Parser.hs  Position.hs  RBTree.hs  Semantic.hs  Symbol.hs  Temp.hs  Test.hs  Translate.hs  Tree.hs  Type.hs
test/: Main.hs  Paths_test.hs
