cabal-version:      3.0
name:               blgo60
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      AST
      RBTree
      Map
      Dag
      Env
      Error
      Frame
      Parser
      Position
      Semantic
      Symbol
      Temp
      Translate

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        parsec,
        vector,
        bytestring,
        text,
        mtl,
        transformers


    hs-source-dirs:   src
    default-language: Haskell2010

executable blgo60
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        blgo60,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite blgo60-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
