cabal-version:      3.0
name:               blgol60
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      AST
      Map
      Graph
      Env
      Error
      Frame
      Lexer
      Parser
      Position
      Semantic
      Symbol
      Temp
      Tree
      Translate
      Type

      Test

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        parsec,
        bytestring,
        text,
        transformers,
        mtl,
        hashable,
        containers,
        unordered-containers,
        pretty-simple

    hs-source-dirs:   src
    default-language: Haskell2010

executable blgol60
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0
      , blgol60

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite blgol60-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.16.0.0
      , blgol60
